force-app/main/default/objects/User/fields/Account_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_Key__c</fullName>
    <label>Account Key</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>