force-app/main/default/objects/User/fields/Contact_Center_License_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Center_License_Name__c</fullName>
    <label>Contact Center License Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>