force-app/main/default/objects/User/fields/CustomText1__c.field-meta.xml
<CustomField>
    <fullName>CustomText1__c</fullName>
    <description>NewCrop Certification: This field is used to store doctor IDs that are related to nurse.</description>
    <label>CustomText1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>