force-app/main/default/objects/User/fields/CustomText2__c.field-meta.xml
<CustomField>
    <fullName>CustomText2__c</fullName>
    <description>NewCrop Certification:  This is used to store NPI of the user.</description>
    <label>CustomText2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>