force-app/main/default/objects/User/fields/dea__c.field-meta.xml
<CustomField>
    <fullName>dea__c</fullName>
    <label>Dea</label>
    <length>255</length>
    <type>Text</type>
</CustomField>