force-app/main/default/objects/User/fields/DEA_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>DEA_NUMBER__c</fullName>
    <description>This field is used to contain the DEA number for New Crop Audit.</description>
    <label>DEA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>