force-app/main/default/objects/User/fields/EHR_License_Name__c.field-meta.xml
<CustomField>
    <fullName>EHR_License_Name__c</fullName>
    <label>EHR License Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>