force-app/main/default/objects/User/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Elixir EHR</fullName>
            </value>
            <value>
                <fullName>Elixir Contact Center</fullName>
            </value>
            <value>
                <fullName>Elixir RCM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>