force-app/main/default/objects/User/fields/licensenumber__c.field-meta.xml
<CustomField>
    <fullName>licensenumber__c</fullName>
    <label>LicenseNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>