force-app/main/default/objects/User/fields/Pharmacy_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Contact_Number__c</fullName>
    <label>Pharmacy Contact Number</label>
    <type>Phone</type>
</CustomField>