force-app/main/default/objects/User/fields/RCM_License_Name__c.field-meta.xml
<CustomField>
    <fullName>RCM_License_Name__c</fullName>
    <label>RCM License Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>