force-app/main/default/objects/User/fields/Role_Type__c.field-meta.xml
<CustomField>
    <fullName>Role_Type__c</fullName>
    <label>Role_Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>User_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>doctor</fullName>
            </value>
            <value>
                <fullName>nurse</fullName>
            </value>
            <value>
                <fullName>admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>