force-app/main/default/objects/User/fields/Signature_Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>Signature_Attachment_Id__c</fullName>
    <label>Signature Attachment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>