force-app/main/default/objects/User/fields/siteId__c.field-meta.xml
<CustomField>
    <fullName>siteId__c</fullName>
    <label>Site Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>