force-app/main/default/objects/User/fields/upin__c.field-meta.xml
<CustomField>
    <fullName>upin__c</fullName>
    <label>Upin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>