force-app/main/default/objects/User/fields/Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>Verification_Code__c</fullName>
    <label>Verification Code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>