force-app/main/default/objects/User/fields/Verification_Code_New__c.field-meta.xml
<CustomField>
    <fullName>Verification_Code_New__c</fullName>
    <label>Verification Code New</label>
    <length>6</length>
    <type>Text</type>
</CustomField>