force-app/main/default/objects/User/fields/Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone__c</fullName>
    <description>This field is currently in use for pharmacy contact numbers on CW; later on, it will be used for a new purpose.</description>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>