force-app/main/default/objects/User/fields/zip4__c.field-meta.xml
<CustomField>
    <fullName>zip4__c</fullName>
    <label>zip4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>